# Copyright (C) 2006-2024 Istituto Italiano di Tecnologia (IIT)
# All rights reserved.
#
# This software may be modified and distributed under the terms of the
# BSD-3-Clause license. See the accompanying LICENSE file for details.

if(YARP_os_FOUND AND YARP_dev_FOUND)
    add_subdirectory(yarpLoggerRerun)
endif()